--- a/10/web/WEB-INF/web.xml
+++ b/10/web/WEB-INF/web.xml
@@ -3,12 +3,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
-    <servlet>
-        <servlet-name>ServletTst</servlet-name>
-        <servlet-class>ServletTest</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>ServletTst</servlet-name>
-        <url-pattern>/test/*</url-pattern>
-    </servlet-mapping>
+    <!--<servlet>-->
+        <!--<servlet-name>ServletTst</servlet-name>-->
+        <!--<servlet-class>ServletTest</servlet-class>-->
+    <!--</servlet>-->
+    <!--<servlet-mapping>-->
+        <!--<servlet-name>ServletTst</servlet-name>-->
+        <!--<url-pattern>/test/*</url-pattern>-->
+    <!--</servlet-mapping>-->
 </web-app>
